Refactor code structure for improved readability and maintainability

--- a/notebooks/get_data.ipynb
+++ b/notebooks/get_data.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "609be35d",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
     "release_id = \"2025-08-12\"\n",
     "\n",
     "# Define dataset name you want to download\n",
-    "dataset_name = 'DOI'\n",
+    "dataset_name = 's2orc_v2'\n",
     "\n",
     "# Send the GET request and store the response in a variable\n",
     "response = requests.get(base_url + release_id + '/dataset/' + dataset_name, headers=headers)\n",
