--- a/notebooks/score-0.563.ipynb
+++ b/notebooks/score-0.563.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fb3c7918",
    "metadata": {
     "_cell_guid": "34135540-31fa-4d24-8934-acb1e0711a4f",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d3f2772c",
    "metadata": {
     "_cell_guid": "98be0899-3cad-423b-a3db-313209068df0",
@@ -1268,7 +1268,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mdc",
    "language": "python",
    "name": "python3"
   },
@@ -1282,7 +1282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.6"
   },
   "papermill": {
    "default_parameters": {},
